// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should render correctly with all the props given 1`] = `
.c0 {
  color: pink;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 0px 8px 0px;
  cursor: pointer;
}

.c0::after {
  color: red;
  content: ' *';
}

<div>
  <label
    class="c0"
    required=""
  >
    Demo Label
  </label>
</div>
`;

exports[`Label component should render correctly with default props 1`] = `
.c0 {
  color: #435465;
  font-size: 1.4rem;
  font-weight: 400;
  -webkit-letter-spacing: 0rem;
  -moz-letter-spacing: 0rem;
  -ms-letter-spacing: 0rem;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

<div>
  <label
    class="c0"
  >
    Label
  </label>
</div>
`;
